<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.hepengju</groupId>
	<artifactId>java-new-features</artifactId>
	<version>0.1</version>

	<name>Java新特性</name>
	<description>Java新特性代码展示 - 5,6,7,8,9,10,11,12,13</description>

	<!-- 描述信息和开发人员信息 -->
	<developers>
		<developer>
			<name>何鹏举</name>
			<email>he_pengju@163.com</email>
		</developer>
		<developer>
			<name>王国荣</name>
		</developer>
		<developer>
			<name>陈楠</name>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<JAVA_HOME>D:\java\jdk-13</JAVA_HOME>
        <!-- 由于有其他参数需要详细配置, 此处注释掉
		<maven.compiler.source>13</maven.compiler.source>
		<maven.compiler.target>13</maven.compiler.target>
		-->
	</properties>

	<dependencies>
		<!-- 数据库驱动 -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.47</version>
		</dependency>

		<!-- JUnit测试 : 5版本的设计思想与用法变化比较大,暂时还是使用4版本的 -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>

		<!--WGR 测试用的O.9,举哥用的1.3，由于1.3没有那些类，当1.3放在上面时，并不会引用0.9的jar包 -->
		<dependency>
			<groupId>org.javamoney</groupId>
			<artifactId>moneta</artifactId>
			<version>0.9</version>
		</dependency>

		<!-- 钱和货币API -->
		<!-- 当1.3和0.9共存的时候，有import类的提示，但还是报错，先注释1.3，便没有问题 -->
		<!-- <dependency> <groupId>org.javamoney</groupId> <artifactId>moneta</artifactId> 
			<version>1.3</version> <type>pom</type> </dependency> -->

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.11</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.10</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>



	<!-- 三.插件配置 -->
	<build>
		<plugins>
			<!-- 0.Maven编译插件: 保留参数名称 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<verbose>true</verbose>
          			<fork>true</fork>
					<executable>${JAVA_HOME}/bin/javac</executable>
					<source>13</source>
					<target>13</target>
					<compilerArgs>
						<arg>-parameters</arg>
						<arg>--enable-preview</arg>
						<!--
						<arg>-Xlint:deprecation</arg>
						<arg>-Xlint:unchecked</arg>
						<arg>-Xlint:preview</arg>
                        -->
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- 版本插件 -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>